--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "uuid": "a3bf9f45-7f63-44fe-bde4-a45a80fc8315"
   },
   "engines": {
-    "npm": ">=8.0.0 <9.0.0",
-    "node": ">=16.0.0 <17.0.0"
+    "npm": ">=10.0.0",
+    "node": ">=20.0.0"
   },
   "license": "MIT"
 }
