--- a/.github/workflows/main_strapi-startup-project.yml
+++ b/.github/workflows/main_strapi-startup-project.yml
@@ -21,10 +21,13 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: copy env file
+        run: cp .env.example .env
+
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
+          npm run develop
           npm run test --if-present
       
       - name: Upload artifact for deployment job
