--- a/.github/workflows/main_strapi-startup-project.yml
+++ b/.github/workflows/main_strapi-startup-project.yml
@@ -29,6 +29,9 @@ jobs:
           npm install
           npm run develop
           npm run test --if-present
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -50,6 +53,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
+
+      - name: unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v1
