--- a/.github/workflows/main_strapi-startup-project.yml
+++ b/.github/workflows/main_strapi-startup-project.yml
@@ -31,7 +31,7 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: Compress-Archive . release.zip
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -55,7 +55,7 @@ jobs:
           name: node-app
 
       - name: unzip artifact for deployment
-        run: unzip release.zip
+        run: Expand-Archive release.zip
       
       - name: Login to Azure
         uses: azure/login@v1
