--- a/.github/workflows/main_strapi-startup-project.yml
+++ b/.github/workflows/main_strapi-startup-project.yml
@@ -27,7 +27,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run develop
+          npm run build
           npm run test --if-present
 
       - name: Zip artifact for deployment
