--- a/.github/workflows/main_strapi-startup-project.yml
+++ b/.github/workflows/main_strapi-startup-project.yml
@@ -55,7 +55,7 @@ jobs:
           name: node-app
 
       - name: unzip artifact for deployment
-        run: Expand-Archive release.zip
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v1
