--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: copy env file
+        run: cp .env.example .env
+
       - name: npm install, build, and test
         run: |
           npm install
