--- a/.github/workflows/main_lg-strapi-prototype.yml
+++ b/.github/workflows/main_lg-strapi-prototype.yml
@@ -29,6 +29,9 @@ jobs:
           npm install
           npm run build
 
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
@@ -47,6 +50,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
+
+      - name: unzip artifact for deployment
+        run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
