--- a/.github/workflows/main_lg-strapi-prototype.yml
+++ b/.github/workflows/main_lg-strapi-prototype.yml
@@ -30,7 +30,7 @@ jobs:
           npm run build
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: & "C:\home\site\7-Zip\7z.exe" a release.zip
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -52,7 +52,7 @@ jobs:
           name: node-app
 
       - name: unzip artifact for deployment
-        run: unzip release.zip
+        run: & "C:\home\site\7-Zip\7z.exe" x release.zip
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
