--- a/.github/workflows/main_lg-strapi-prototype.yml
+++ b/.github/workflows/main_lg-strapi-prototype.yml
@@ -29,14 +29,14 @@ jobs:
           npm install
           npm run build
 
-      - name: Zip artifact for deployment
-        run: C:\home\site\7-Zip\7z.exe a release.zip
+      - name: 'Tar files'
+        run: tar -cf node-app.tar .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: node-app.tar
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,8 +51,8 @@ jobs:
         with:
           name: node-app
 
-      - name: unzip artifact for deployment
-        run: C:\home\site\7-Zip\7z.exe x release.zip
+      - name: 'Untar files'
+        run: 'tar -xf node-app.tar'
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
