--- a/.github/workflows/main_lg-strapi-prototype.yml
+++ b/.github/workflows/main_lg-strapi-prototype.yml
@@ -1,3 +1,5 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
 
 name: Build and deploy container app to Azure Web App - lg-strapi-prototype
 
@@ -21,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_f5baa874e1d04ca0aff1a69581512586 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_834831ce880b4f28a70df3cd2c083346 }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_7a97046e4d484981a7dd99a4c7beb0f7 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_3f31c58fd3dc4bd6881b12c6ac1c0cf4 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_f5baa874e1d04ca0aff1a69581512586 }}/test:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_7a97046e4d484981a7dd99a4c7beb0f7 }}/mcr.microsoft.com/appsvc/staticsite:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -45,5 +47,5 @@ jobs:
       with:
         app-name: 'lg-strapi-prototype'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_811acac81b434286bed739d72c16e3da }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_f5baa874e1d04ca0aff1a69581512586 }}/test:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_c7842777875b460999a69412786c406d }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_7a97046e4d484981a7dd99a4c7beb0f7 }}/mcr.microsoft.com/appsvc/staticsite:${{ github.sha }}'
