--- a/.github/workflows/main_lg-strapi-prototype.yml
+++ b/.github/workflows/main_lg-strapi-prototype.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_d05a50c6731f4a8bb947b6ea3c0de61b }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_12c5aa583cd24d808c0b93c89c26155e }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_fa26f68130124db8976f67d1a668c01f }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_b4a43fd61ee244f1bde84365426b11ef }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_d05a50c6731f4a8bb947b6ea3c0de61b }}/mcr.microsoft.com/appsvc/staticsite:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_fa26f68130124db8976f67d1a668c01f }}/lg-strapi-docker-image:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'lg-strapi-prototype'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_476aa287a67f4f089f59ae8d2c136969 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_d05a50c6731f4a8bb947b6ea3c0de61b }}/mcr.microsoft.com/appsvc/staticsite:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_f39e79e03ee34827820e884fa752f9ea }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_fa26f68130124db8976f67d1a668c01f }}/lg-strapi-docker-image:${{ github.sha }}'
