--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -30,7 +30,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_ac42944ca63b4579b93e108f874a4296 }}/ionutpantazi/lg-strapi-docker:latest
+        tags: latest
         file: ./Dockerfile
 
   deploy:
