--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_ac42944ca63b4579b93e108f874a4296 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_0df9db7570814d5fae925753ece0eefc }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_eaca660d5cfb4e4c9d7f458b0386d440 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_0cdff7d3f1054bdbb1799892053e0b8d }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: latest
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_eaca660d5cfb4e4c9d7f458b0386d440 }}/ionutpantazi/lg-strapi-docker:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'lg-prototype-strapi'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_22daad2c4c044a57b77a37cb47e9b250 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_ac42944ca63b4579b93e108f874a4296 }}/ionutpantazi/lg-strapi-docker:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_6b5c54360087491a9f42bc6b4ca9e004 }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_eaca660d5cfb4e4c9d7f458b0386d440 }}/ionutpantazi/lg-strapi-docker:${{ github.sha }}'
