--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -22,7 +22,13 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
-        registry: https://index.docker.io/ionutpantazi/lg-strapi-docker
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.AzureAppService_ContainerUsername_eaca660d5cfb4e4c9d7f458b0386d440 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_0cdff7d3f1054bdbb1799892053e0b8d }}
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
         username: ${{ secrets.AzureAppService_ContainerUsername_eaca660d5cfb4e4c9d7f458b0386d440 }}
         password: ${{ secrets.AzureAppService_ContainerPassword_0cdff7d3f1054bdbb1799892053e0b8d }}
 
