--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -28,16 +28,19 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
-        registry: https://index.docker.io/ionutpantazi/lg-strapi-docker
+        registry: https://index.docker.io/v1/
         username: ${{ secrets.AzureAppService_ContainerUsername_eaca660d5cfb4e4c9d7f458b0386d440 }}
         password: ${{ secrets.AzureAppService_ContainerPassword_0cdff7d3f1054bdbb1799892053e0b8d }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        push: true
-        tags: latest
-        file: ./Dockerfile
+    - name: Build the Docker image
+      run: docker build -t ionutpantazi/lg-strapi-docker .
+    
+    # - name: Build and push
+    #   uses: docker/build-push-action@v5
+    #   with:
+    #     push: true
+    #     tags: latest
+    #     file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
