--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.AzureAppService_ContainerUsername_eaca660d5cfb4e4c9d7f458b0386d440 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_0cdff7d3f1054bdbb1799892053e0b8d }}
+    # - name: Login to Docker Hub
+    #   uses: docker/login-action@v3
+    #   with:
+    #     username: ${{ secrets.AzureAppService_ContainerUsername_eaca660d5cfb4e4c9d7f458b0386d440 }}
+    #     password: ${{ secrets.AzureAppService_ContainerPassword_0cdff7d3f1054bdbb1799892053e0b8d }}
 
     - name: Log in to registry
       uses: docker/login-action@v2
@@ -34,6 +34,9 @@ jobs:
 
     - name: Build the Docker image
       run: docker build -t ionutpantazi/lg-strapi-docker .
+
+    - name: Push the Docker image to ACR
+      run: docker push ionutpantazi/lg-strapi-docker
     
     # - name: Build and push
     #   uses: docker/build-push-action@v5
