--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -19,6 +19,12 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    # - name: Login to Docker Hub
+    #   uses: docker/login-action@v3
+    #   with:
+    #     username: ${{ secrets.AzureAppService_ContainerUsername_6f509ed379044bd89f2a24e7ada9d2a3 }}
+    #     password: ${{ secrets.AzureAppService_ContainerPassword_2c78cddba6ff4d98b7aa4b5d91b4275d }}
+
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
@@ -26,12 +32,18 @@ jobs:
         username: ${{ secrets.AzureAppService_ContainerUsername_6f509ed379044bd89f2a24e7ada9d2a3 }}
         password: ${{ secrets.AzureAppService_ContainerPassword_2c78cddba6ff4d98b7aa4b5d91b4275d }}
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_6f509ed379044bd89f2a24e7ada9d2a3 }}/ionutpantazi/lg-strapi-docker:${{ github.sha }}
-        file: ./Dockerfile
+    - name: Build the Docker image
+      run: docker build -t ionutpantazi/lg-strapi-docker .
+
+    # - name: Push the Docker image to ACR
+    #   run: docker push ionutpantazi/lg-strapi-docker
+    
+    # - name: Build and push
+    #   uses: docker/build-push-action@v5
+    #   with:
+    #     push: true
+    #     tags: latest
+    #     file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
