--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -60,4 +60,4 @@ jobs:
         app-name: 'lg-prototype-strapi'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_79ed991969f341c3a3c5064029dd5ddf }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_6f509ed379044bd89f2a24e7ada9d2a3 }}/ionutpantazi/lg-strapi-docker:${{ github.sha }}'
+        images: 'ionutpantazi/lg-strapi-docker:latest'
