--- a/.github/workflows/main_lg-prototype-strapi.yml
+++ b/.github/workflows/main_lg-prototype-strapi.yml
@@ -33,7 +33,7 @@ jobs:
         password: ${{ secrets.AzureAppService_ContainerPassword_2c78cddba6ff4d98b7aa4b5d91b4275d }}
 
     - name: Build the Docker image
-      run: docker build -t ionutpantazi/lg-strapi-docker .
+      run: docker build -t ionutpantazi/test .
 
     # - name: Push the Docker image to ACR
     #   run: docker push ionutpantazi/lg-strapi-docker
@@ -60,4 +60,4 @@ jobs:
         app-name: 'lg-prototype-strapi'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_79ed991969f341c3a3c5064029dd5ddf }}
-        images: 'ionutpantazi/lg-strapi-docker'
+        images: 'ionutpantazi/test'
