--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-graphql": "4.21.1",
     "@strapi/plugin-i18n": "4.21.1",
     "@strapi/plugin-users-permissions": "4.21.1",
+    "@strapi/provider-upload-aws-s3": "^4.24.3",
     "@strapi/strapi": "4.21.1",
     "better-sqlite3": "8.6.0",
     "mysql": "^2.18.1",
@@ -21,7 +22,6 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
     "strapi-plugin-navigation": "^2.4.0",
-    "strapi-provider-ydaws-s3": "file:providers/strapi-provider-ydaws-s3",
     "styled-components": "5.3.3"
   },
   "author": {
