--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEYS=yVag0nDfNNTGbDWfgBop8w==,mOFJniPsT6XVZidDm9S0qg==,W7FDbO+NdjDCvK8czIOGW
 API_TOKEN_SALT=pNaHzIf/EeV94GKX0OAcxQ==
 ADMIN_JWT_SECRET=TBnyRTMo6xUfBamlqD2+fw==
 TRANSFER_TOKEN_SALT=d1ag//gcewC0Ky+33JX1oQ==
+URL=https://lg-prototype-strapi.azurewebsites.net/
 
 # Live Database
 DATABASE_HOST=lg-prototype-db.mysql.database.azure.com
