--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-graphql": "4.21.1",
     "@strapi/plugin-i18n": "4.21.1",
     "@strapi/plugin-users-permissions": "4.21.1",
+    "@strapi/provider-upload-aws-s3": "^4.24.3",
     "@strapi/strapi": "4.21.1",
     "better-sqlite3": "8.6.0",
     "mysql": "^2.18.1",
